<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/onBoardFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.boardfragment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.boardfragment.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.boardfragment.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/onBoardFragment"
        android:name="com.example.boardfragment.ui.onboard.OnBoardFragment"
        android:label="fragment_on_board"
        tools:layout="@layout/fragment_on_board" />
    <fragment
        android:id="@+id/pnBoardPageFragment"
        android:name="com.example.boardfragment.ui.onboard.PnBoardPageFragment"
        android:label="fragment_pn_board_page"
        tools:layout="@layout/fragment_pn_board_page" />
</navigation>