<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.onboard.PnBoardPageFragment">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="400dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:src="@drawable/back11"
       android:layout_marginTop="30dp"
       android:id="@+id/iv"/>
    <TextView
        android:id="@+id/tv_page"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next"/>
    <Button
        android:id="@+id/btn_skip"
        android:layout_width="80dp"
        android:layout_marginTop="20dp"
       android:layout_marginEnd="30dp"
        android:layout_marginBottom="70dp"
        android:layout_height="40dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/circle"
        android:text="@string/skip"/>
    <Button
        android:id="@+id/btn_start"
        android:layout_width="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/circle"
        android:text="@string/start"/>




</androidx.constraintlayout.widget.ConstraintLayout>